--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -19,13 +19,22 @@
             android:layout_marginTop="50dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/screen_background_light_transparent" />
+            app:srcCompat="@android:drawable/screen_background_light_transparent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="30dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView"
+            android:scaleX="1.5"
+            android:scaleY="1.5"
+            app:layout_constraintHorizontal_bias="0.512"
+            app:layout_constraintVertical_bias="0.512" />
+
 
         <TextView
             android:id="@+id/txtWins"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="155dp"
+            android:layout_marginTop="184dp"
             android:text="Wins"
             android:textColor="@android:color/holo_green_light"
             android:textSize="24sp"
@@ -38,7 +47,7 @@
             android:id="@+id/txtWinValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="16dp"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -49,20 +58,19 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="102dp"
-            android:text="TextView"
+            android:layout_marginTop="122dp"
             android:textColor="@android:color/white"
             android:textSize="30sp"
+            app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.501" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txtLosses"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="155dp"
+            android:layout_marginTop="184dp"
             android:text="Losses"
             android:textColor="@android:color/holo_red_light"
             android:textSize="24sp"
@@ -75,7 +83,7 @@
             android:id="@+id/txtLossesValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="16dp"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             app:layout_constraintLeft_toRightOf="@+id/txtWinValue"
@@ -86,7 +94,7 @@
             android:id="@+id/txtWinRateValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="16dp"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             app:layout_constraintLeft_toRightOf="@+id/txtLossesValue"
@@ -97,7 +105,7 @@
             android:id="@+id/txtWinRate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="155dp"
+            android:layout_marginTop="184dp"
             android:text="Win Rate"
             android:textColor="@android:color/white"
             android:textSize="24sp"
