--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,22 +66,20 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="66dp"
         app:layout_constraintTop_toTopOf="parent"
         android:scaleX="1.5"
-        android:scaleY="1.5"/>
+        android:scaleY="1.7"/>
 
     <Button
         android:id="@+id/email_sign_in_button"
-        style="?android:textAppearanceSmall"
+        style="?android:textAppearanceButton"
         android:layout_width="353dp"
         android:layout_height="54dp"
         android:layout_marginBottom="168dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:background="?attr/colorButtonNormal"
-        android:backgroundTint="@android:color/darker_gray"
-        android:elevation="0dp"
+        android:background="#4D4D4D"
         android:text="@string/action_search"
         android:textColor="@android:color/white"
         android:textStyle="bold"
@@ -103,7 +101,7 @@
         android:textColor="@android:color/white"
         android:textSize="36sp"
         android:visibility="visible"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="70dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
